<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="numberkeyboard_zero">0</string>
    <string name="numberkeyboard_one">1</string>
    <string name="numberkeyboard_two">2</string>
    <string name="numberkeyboard_three">3</string>
    <string name="numberkeyboard_four">4</string>
    <string name="numberkeyboard_five">5</string>
    <string name="numberkeyboard_six">6</string>
    <string name="numberkeyboard_seven">7</string>
    <string name="numberkeyboard_eight">8</string>
    <string name="numberkeyboard_nine">9</string>
</resources>